--- a/examples/dots.html
+++ b/examples/dots.html
@@ -5,7 +5,6 @@
 <head>
     <title>Pocket - Intro</title>
     <meta charset="utf-8">
-    <script src="../pocket.js"></script>
 </head>
 
 <body>
@@ -15,7 +14,8 @@
     <h3>Closest dot to the cursor:</h3>
     <p id="dots"></p>
 
-    <script>
+    <script type="module">
+        import {Pocket, Particle} from "../pocket.js";
         var pocket, canvas, ctx, dots, progress, current = 0;
         const size = 0.5;
         const count = 10000000;
