--- a/examples/visualized.html
+++ b/examples/visualized.html
@@ -56,7 +56,7 @@
                 const closest = pocket.closest({ x: e.offsetX, y: e.offsetY });
 
                 // Draw the particle's subPockets
-                var subPocket = closest.subPocket;
+                var subPocket = closest._subPocket;
                 while (subPocket.radius) {
                     console.log(subPocket);
                     ctx.strokeStyle = 'red';
