--- a/examples/web.html
+++ b/examples/web.html
@@ -33,7 +33,7 @@
   <canvas id="particles"></canvas>
 
   <script type="module">
-    import { Pocket, Particle } from "https://cdn.jsdelivr.net/gh/trmid/pocket/pocket.js";
+    import { Pocket, Particle } from "../pocket.js";
 
     window.addEventListener("load", () => {
 
